feat(payment): stripe checkout, customer portal, internal employee discount
